# TimerScripts-DLL

./: README.md  meson.build
src/: account.c  api.c  main.c
src/headers/: account.h  api.h
